--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
